# simeshse

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml
scripts/: run_dev.py
src/simeshse/: __init__.py  app.py  database.py  directories.py  preprocessor.py  settings.py
src/simeshse/resources/static/admin_assets/: LICENSE.inkjet.txt  inkjet.min.js  style.css  upload_media_items.js
src/simeshse/resources/static/assets/: LICENSE.charter.txt  style.css
src/simeshse/resources/templates/: admin_add_new_section.html.jinja  admin_integrity_problems.html.jinja  admin_section_controls.html.jinja  main.html.jinja  media.html.jinja
src/simeshse/routers/: __init__.py  admin.py  media.py  util.py
