# Copyright (C) 2026 Julian Valentin
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "simeshse"
version = "1.0.0"
description = "Simple media sharing server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.135.1",
    "jinja2>=3.1.6",
    "pillow>=12.1.1",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.fastapi]
entrypoint = "simeshse.app:app"

[tool.mypy]
files = [
    "src",
]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "ASYNC240",
    "COM812",
    "D203",
    "D213",
    "S603",
    "S607",
]
select = ["ALL"]
